Classes e xml's Lista de servicos oferecidos parcialmente implementados

--- a/app/src/main/res/layout/fragment_oferecer.xml
+++ b/app/src/main/res/layout/fragment_oferecer.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".perfil.PerfilFragment">
+    tools:context=".oferecer.OferecerFragment">
 
-    <TextView
-        android:id="@+id/text_notifications"
+    <!--<TextView
+        android:id="@+id/text_oferecer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -18,5 +18,14 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />-->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_oferecer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        android:scrollbars="vertical"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
