--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_oferecer">
 
     <fragment
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_oferecer"
         android:name="com.compsol.appsol.pegaservico.oferecer.OferecerFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_oferecer" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_pegar"
         android:name="com.compsol.appsol.pegaservico.pegar.PegarFragment"
         android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_pegar" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_perfil"
         android:name="com.compsol.appsol.pegaservico.perfil.PerfilFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_perfil" />
 </navigation>
