--- a/app/src/main/res/layout/fragment_pegar.xml
+++ b/app/src/main/res/layout/fragment_pegar.xml
@@ -7,7 +7,7 @@
     tools:context=".pegar.PegarFragment">
 
     <TextView
-        android:id="@+id/text_dashboard"
+        android:id="@+id/text_pegar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
