--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_oferecer"
-        android:name="com.compsol.appsol.pegaservico.oferecer.OferecerFragment"
+        android:name="com.compsol.appsol.pegaservico.oferecer.ui.OferecerFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_oferecer" />
 
