--- a/app/src/main/res/layout/item_service.xml
+++ b/app/src/main/res/layout/item_service.xml
@@ -1,49 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    android:layout_marginBottom="4dp">
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/imgAvatar"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+
         android:src="@android:drawable/sym_def_app_icon"
         app:civ_border_color="#FF000000"
         app:civ_border_width="1dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="8dp" />
+         />
+    <!--
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+    -->
+
 
     <TextView
         android:id="@+id/txtNomeUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+
         android:text="Nome"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@id/imgAvatar"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="8dp" />
+    <!--
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+    -->
 
     <TextView
         android:id="@+id/txtStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginTop="8dp"
+
         android:text="Status"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         android:textColor="@color/design_default_color_primary"
         app:layout_constraintTop_toTopOf="parent" />
+    <!--
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+    -->
 
     <LinearLayout
         android:id="@+id/labelLinearLayout"
@@ -60,7 +72,7 @@
             android:layout_marginStart="8dp"
             android:text="Data: "
             android:layout_marginLeft="8dp"
-            android:textSize="16dp"/>
+            android:textSize="14dp"/>
 
         <TextView
             android:id="@+id/labelTime"
@@ -69,7 +81,7 @@
             android:layout_marginStart="8dp"
             android:text="Entrada: "
             android:layout_marginLeft="8dp"
-            android:textSize="16dp" />
+            android:textSize="14dp" />
 
     </LinearLayout>
 
@@ -89,7 +101,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
             android:text="07/03/2018"
-            android:textSize="16dp" />
+            android:textSize="14dp" />
 
         <TextView
             android:id="@+id/txtTime"
@@ -97,7 +109,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
             android:text="07:00"
-            android:textSize="16dp" />
+            android:textSize="14dp" />
 
     </LinearLayout>
 
@@ -118,7 +130,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:text="Horas: "
-            android:textSize="16dp" />
+            android:textSize="14dp" />
 
         <TextView
             android:id="@+id/labelValue"
@@ -128,7 +140,7 @@
             android:layout_marginLeft="8dp"
             android:text="Valor: "
             android:textStyle="bold"
-            android:textSize="18dp" />
+            android:textSize="14dp" />
 
     </LinearLayout>
 
@@ -146,7 +158,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
             android:text="12 hs"
-            android:textSize="16dp" />
+            android:textSize="14dp" />
 
         <TextView
             android:id="@+id/txtValue"
@@ -154,7 +166,7 @@
             android:layout_height="wrap_content"
             android:layout_marginRight="8dp"
             android:text="120,00 R$"
-            android:textSize="18dp"
+            android:textSize="16dp"
             android:textStyle="bold"/>
 
     </LinearLayout>
