--- a/app/src/main/res/layout/item_service.xml
+++ b/app/src/main/res/layout/item_service.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -170,9 +171,55 @@
             android:textSize="16dp"
             android:textStyle="bold"/>
 
+
+
+
     </LinearLayout>
 
 
+    <LinearLayout
+        android:id="@+id/sub_item"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:paddingVertical="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dataLinearLayout2">
+
+        <!--<TextView
+            android:id="@+id/sub_item_pegar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingHorizontal="8dp"
+            android:text="Pegar"
+            android:textSize="20sp"
+            android:textColor="@color/design_default_color_primary"
+            android:textStyle="bold"/>-->
+        <Button
+            android:id="@+id/sub_item_pegar"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="4dp"
+            android:backgroundTint="#EEEEEE"
+            android:text="Pegar"
+            android:textStyle="bold"
+            android:textColor="#3E55D5"
+            app:cornerRadius="120dp"
+            app:strokeColor="#3E55D5"
+            app:strokeWidth="1dp" />
+
+        <!--<TextView
+            android:id="@+id/sub_item_cancelar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:paddingHorizontal="8dp"
+            android:text="Cancelar"
+            android:textColor="#EA4646"
+            android:textSize="20sp" />-->
+    </LinearLayout>
 
 
 
